# nordenrs

./: .env  .gitignore  Cargo.toml
migrations/2025-03-25-083738_create_users/: down.sql  up.sql
migrations/2025-03-25-084525_create_users/: up.sql
migrations/2025-03-25-084932_create_users/: up.sql
src/: lib.rs  main.rs
src/configures/: options.rs
src/controllers/: auth.rs  users.rs
src/middlewares/: jwt.rs
src/models/: user.rs
src/routes/: api.rs
