[package]
name = "nordenrs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
env_logger = "0.11.7"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] } 
log = "0.4.26"
rand = "0.9.0"
dotenvy = "0.15"
listenfd = "1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.20.0", features = ["macros", "rt"] }
tokio-postgres = "0.7" 
serde_json = "1.0.140"
bcrypt = "0.17.0"
jsonwebtoken = "8.1"
chrono = "0.4"
